--- a/component/currencyComponent.html
+++ b/component/currencyComponent.html
@@ -17,5 +17,7 @@
         <option value="USD">USD</option>
         <option value="EUR">EUR</option>
     </select>
-
+    <p>
+        <a href="#" onclick="showDisclaimer();">Disclaimer</a>
+    </p>
 </div>
