Included a border to a container div. Aesthetic change...

--- a/component/currencyComponent.html
+++ b/component/currencyComponent.html
@@ -1,4 +1,4 @@
-<div class="currencyComponent">
+<div class="currencyComponent boxDiv">
     <h1>Currency Converter</h1>
     <p>Type in amount and select currency:</p>
     <input type="text" id="inputValue" oninput = "calculateCurrency()" value="0.00"/>
